--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
     "@emotion/styled": "^11.6.0",
     "@fontsource/roboto": "^4.5.2",
     "@mui/icons-material": "^5.3.1",
+    "@mui/lab": "^5.0.0-alpha.67",
     "@mui/material": "^5.4.0",
+    "moment": "^2.29.1",
     "next": "^12.0.10",
+    "notistack": "^2.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.0.0-rc.0",
-    "react-dom": "^18.0.0-rc.0"
+    "react-dom": "^18.0.0-rc.0",
+    "react-transition-group": "^4.4.2",
+    "uuid": "^8.3.2",
+    "web3": "^1.7.0"
   },
   "devDependencies": {
     "eslint": "8.8.0",
