--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,13 +2,13 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["src/components/*"],
-      "@styles/*": ["styles/*"],
-      "@public/*": ["public/*"],
-      "@utils/*": ["src/utils/*"],
-      "@hooks/*": ["src/hooks/*"],
-      "@context/*": ["src/context/*"],
-      "@pages/*": ["src/pages/*"],
+      "components/*": ["src/components/*"],
+      "styles/*": ["styles/*"],
+      "public/*": ["public/*"],
+      "utils/*": ["src/utils/*"],
+      "hooks/*": ["src/hooks/*"],
+      "context/*": ["src/context/*"],
+      "pages/*": ["src/pages/*"],
     }
   }
 }
