--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,5 +22,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
-    - run: yarn build --if-present
+    - run: yarn install --frozen-lockfile
     - run: yarn test
