--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,6 +9,8 @@
       "hooks/*": ["src/hooks/*"],
       "context/*": ["src/context/*"],
       "pages/*": ["src/pages/*"],
+      "sequelizeDb/*": ["sequelize/*"],
+      "middleware/*": ["src/middleware/*"],
     }
   }
 }
