--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "i18nexus pull && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "next": "^12.0.10",
+    "next-i18next": "^10.3.0",
     "notistack": "^2.0.3",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
@@ -50,6 +51,7 @@
     "enzyme": "^3.11.0",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
+    "i18nexus-cli": "^2.0.2",
     "jest": "^27.5.1",
     "jest-canvas-mock": "^2.3.1",
     "sequelize-cli": "^6.4.1"
@@ -98,14 +100,6 @@
       "!<rootDir>/build/**/*.*",
       "!<rootDir>/cypress/**/*.*"
     ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 80,
-        "functions": 80,
-        "lines": 90,
-        "statements": 90
-      }
-    },
     "moduleNameMapper": {
       "\\.(jpg|JPG|ico|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|scss|less)$": "<rootDir>/__mocks__/styleMock.js"
