--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "my-app",
   "private": true,
   "scripts": {
-    "dev": "i18nexus pull && next dev",
-    "build": "next build",
+    "dev": " next dev",
+    "build": "i18nexus pull && next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest --coverage --colors",
@@ -27,8 +27,10 @@
     "@mui/lab": "^5.0.0-alpha.67",
     "@mui/material": "^5.4.0",
     "bcrypt": "^5.0.1",
+    "cookie": "^0.4.2",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "next": "^12.0.10",
     "next-i18next": "^10.3.0",
@@ -47,13 +49,19 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "enzyme": "^3.11.0",
     "eslint": "8.8.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.0.10",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-jsconfig": "^1.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "i18nexus-cli": "^2.0.2",
     "jest": "^27.5.1",
     "jest-canvas-mock": "^2.3.1",
+    "prettier": "^2.5.1",
     "sequelize-cli": "^6.4.1"
   },
   "jest": {
